--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -1164,7 +1164,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </div>
         <div align="right"><br>
           * required </div>
-        <div class="globalbuttons"> <a href="#"><img src="../images/buttonsmall_reload.gif" width="75" height="18" border="0"></a> <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+          
+<!-- GLOBAL NAV BUTTONS -->
+    <div class="globalbuttons">
+        <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0"></a>
+    </div>   
+          
       </div></td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
