--- a/kra-awa-dev/aw-questions.html
+++ b/kra-awa-dev/aw-questions.html
@@ -436,7 +436,16 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
         <div align=right><br>
           * required</div>
-      <div class="globalbuttons"> <a href="../kra-coeus-awards-MR-Backup/parameters.html"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><img src="../images/buttonsmall_close.gif" alt="save" width="48" height="18" hspace="5" border="0"></a><a href="../confirm-cancel.html"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div></td>
+      
+<!-- GLOBAL NAV BUTTONS -->
+    <div class="globalbuttons">
+        <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0"></a>
+    </div>
+      
+      </td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
 </table>
