[BFN} KRAFUNC-19 updates
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6286 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -2269,7 +2269,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><input type="text" value="Super-Widget" name="pjo1" style="width:98%;" /></td>
                   <td><input type="text" value="Widget R Us" name="pho1" style="width:98%;" /></td>
                   <td><input type="text" value="12345" name="pfo1" style="width:98%;" /></td>
-                  <td><input type="text" value="$7,853.69" name="pgo1" style="width:98%;text-align:right;" /></td>
+                  <td><input type="text" value="7,853.69" name="pgo1" style="width:98%;text-align:right;" /></td>
                   <td style="text-align:center; width:120px;">
                   	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
                     <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
@@ -2325,7 +2325,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><input type="text" value="Detroit,Michigan" name="as1" style="width:98%;" /></td>
                   <td><input type="text" value="02/25/2008" name="zx1" style="width:98%;" /></td>
                   <td><input type="text" value="02/29/2008" name="er1" style="width:98%;" /></td>
-                  <td><input type="text" value="$3,256.23" name="df1" style="width:98%; text-align:right;" /></td>
+                  <td><input type="text" value="3,256.23" name="df1" style="width:98%; text-align:right;" /></td>
                   <td style="text-align:center; width:120px;">
                   	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
                     <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
@@ -2337,7 +2337,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><input type="text" value="Oahu,Hawaii" name="qas1" style="width:98%;" /></td>
                   <td><input type="text" value="01/15/2008" name="qzx1" style="width:98%;" /></td>
                   <td><input type="text" value="04/08/2008" name="qer1" style="width:98%;" /></td>
-                  <td><input type="text" value="$5,823.45" name="qdf1" style="width:98%; text-align:right;" /></td>
+                  <td><input type="text" value="5,823.45" name="qdf1" style="width:98%; text-align:right;" /></td>
                   <td style="text-align:center;">
                   	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
                     <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
