[BFN] KRAFUNC-21 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6297 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -62,6 +62,10 @@ Page
     
 <!-- <<<<<<<< ORIGINAL TEMPLATE >>>>>>>>> -->
 
+
+<!-- INPUT: PERCENTAGE -->
+<input name="textfield" type="text" id="textfield" value="50.00" style="width:35px; text-align:right;">
+
 <!-- TAB: Reporting Requirements --> 
 	<!-- Tab Header --> 
         <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
