--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -340,7 +340,7 @@
                     <span class="subhead-left"><h2>Cost Share</h2></span>
                     <span class="subhead-right">
                         <span class="subhead">
-                        	<a href="#"><img src="../images/tinybutton-validbenefitsrates.gif" width="100" height="15" border="0" alt="valid benefits rates" align="absmiddle" /></a>
+                        	<!--<a href="#"><img src="../images/tinybutton-validbenefitsrates.gif" width="100" height="15" border="0" alt="valid benefits rates" align="absmiddle" /></a>-->
                         	<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a>
                         </span>
                     </span>
@@ -363,7 +363,7 @@
                         <th>Add:</th>
                         <td class="infoline">
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" size="2">%
+                            <input name="textfield" type="text" id="textfield" style="width:35px; text-align:right;">%
                             </div>
                         </td>
                         <td class="infoline">
@@ -414,7 +414,7 @@
                         <th>1</th>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="50" size="2">
+                            <input name="textfield" type="text" id="textfield" value="50.00" style="width:35px; text-align:right;">
                             </div>
                         </td>
                         <td>
@@ -462,7 +462,7 @@
                         <th>2</th>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="50" size="2">
+                            <input name="textfield" type="text" id="textfield" value="50.00" style="width:35px; text-align:right;">
                             </div>
                         </td>
                         <td>
@@ -578,8 +578,8 @@
                         <th nowrap scope="row">Add:</th>
                         <td nowrap class="infoline">
                         	<div align="center">
-                        	<input name="date3" type="text" size="6" id="expiration date">
-                        	%</div>
+                            <input name="rate0" type="text" id="textfield" value="" style="width:35px; text-align:right;">%
+                            </div>
                         </td>
                         <td nowrap class="infoline">
                         	<div align="center">
@@ -650,7 +650,7 @@
                     	<td>
                         	<div align="center">
                     			<div align="center"> 
-                    			  <input name="date3" type="text" id="expiration date" value="5.35 " size="6">
+                    			  <input name="rate1" type="text" id="textfield" value="5.35" style="width:35px; text-align:right;">
                     			</div>
                    		  </div>
                         </td>
@@ -696,7 +696,7 @@
                     <tr>
                     	<th scope="row"><div align="center">2</div></th>
                     	<td><div align="center">
-                    	  <input name="date3" type="text" id="expiration date" value="5.35 " size="6">
+                    	  <input name="rate2" type="text" id="textfield" value="5.35" style="width:35px; text-align:right;">
                    	  </div></td>
                     	<td><div align="center">
                     	  <select name="prtcl_aprv_pnd_ind_param.0" value="" id="approval status">
