[BFN] KRAFUNC-105 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6299 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -207,7 +207,7 @@
                         <td style="text-align:left;">
                             <input name="obligatedtotal" value="$0.00" type="text" size="12" style="text-align:right;">
                         </td>
-                        <th style="text-align:right;">Final Expiration Date:</th>
+                        <th style="text-align:right;">Anticipated Total:</th>
                         <td style="text-align:left;">
                             <input name="anticipatedtotal" value="$1.00" type="text" size="12" style="text-align:right;">
                         </td>
@@ -217,8 +217,8 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Period</th>
-                        <th>Start Date</th>
-                        <th>End Date</th>
+                        <th>*Start Date</th>
+                        <th>*End Date</th>
                         <th>Direct Cost</th>
                         <th>Indirect Cost</th>
                         <th>Actions</th>
