[BFN] KRAFUNC-57 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6301 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -441,7 +441,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th><div align=right>
-                    <label for="label2">Version:</label>
+                    <label for="label2">*Version:</label>
                   </div></th>
                 <td>1</td>
                 <th><div align=right>
