[BFN] KRAFUNC-99 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6308 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -184,7 +184,7 @@ Page
 
 
 <!-- Calendar -->
-<input name="date1" type="text" id="aaplication date" value="31-Dec-2009" size="10" />
+<input type="text" name="date1" id="date1" value="31-Dec-2009" size="10" />
 <a href="#" target="calWindow" title="date selector"><img src="../images/cal.gif" style="cursor:pointer;" alt="date selector" align="top" /></a>
 
 
