git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6311 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -123,10 +123,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
 
               <tr>
-                <th  scope="row"> <div align="right">Payment Basis:</div></th>
-                <td><input type="text" id="paymentbasis" name="paymentbasis" size="25" value="Cost Reimbursement" /></td>
-                <th><div align="right">Payment Method:</div></th>
-                <td><input type="text" id="paymentmethod" name="paymentmethod" size="25" value="Est&#146;d ACH mech" /></td>
+                <th  scope="row"> <div align="right">*Payment Basis:</div></th>
+                <td>
+                	<select name="paymentbasis" id="paymentbasis">
+                    	<option value="0" selected>Cost Reimbursement</option>
+                        <option value="0">Ipsum</option>
+                        <option value="0">Lorem</option>
+                        <option value="0">Ulset</option>
+                    </select>
+                </td>
+                <th><div align="right">*Payment Method:</div></th>
+                <td>
+                	<select name="paymentmethod" id="paymentmethod">
+                    	<option value="0" selected>Est&#146;d ACH mech</option>
+                        <option value="0">Ipsum</option>
+                        <option value="0">Lorem</option>
+                        <option value="0">Ulset</option>
+                    </select>
+                </td>
               </tr>
               <tr>
                 <th  scope="row"><div align="right">Final Invoice:</div></th>
